--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Learn Heroku - Takeover by fadam h1</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Takeover by fadam h1</h1>
 <style>
 h1 {
   color: teal;
