--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn Heroku - Takeover by fadam h1</title>
+    <title>Learn Heroku </title>
   </head>
   <body>
-    <h1>Takeover by fadam h1</h1>
+    <h1>Website is construction</h1>
+     <!--Domain takeover by fadam h1-->
 <style>
 h1 {
   color: teal;
