--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Learn Heroku </title>
   </head>
   <body>
-    <h1>Website is construction</h1>
+    <h1>Website in construction</h1>
      <!--Domain takeover by fadam h1-->
 <style>
 h1 {
